2012-09-25  Simon Fraser  <simon.fraser@apple.com>

        Speculative build fix for Production builds.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:

2012-09-25  Simon Fraser  <simon.fraser@apple.com>

        Fix the build after r129566.

        * DumpRenderTree/mac/FrameLoadDelegate.mm:

2012-09-25  Dominic Mazzoni  <dmazzoni@google.com>

        AX: AccessibilityUIElementChromium.cpp won't build on Windows without wtf/StringExtras.h
        https://bugs.webkit.org/show_bug.cgi?id=97614

        Unreviewed, fixing windows breakage.

        Added wtf/StringExtras.h to the includes to fix the Chromium/Windows build.

        * DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp:

2012-09-24  Simon Fraser  <simon.fraser@apple.com>

        <rdar://problem/12351906> Have DumpRenderTree and WebKitTestRunner crash logs show which test crashed

        Reviewed by Mark Rowe.

        Use a new WebKitSytemInterface function to add data to crash logs about which 
        test was running when the crash happened.

        * DumpRenderTree/mac/Configurations/DebugRelease.xcconfig: Make sure WEBKIT_SYSTEM_INTERFACE_LIBRARY is defined.
        * DumpRenderTree/mac/Configurations/DumpRenderTree.xcconfig: link with the WebKitSystemInterface library.
        * DumpRenderTree/mac/FrameLoadDelegate.mm:
        (testPathFromURL): Given a (probably) file URL, return the part after "/LayoutTests/"
        (-[FrameLoadDelegate webView:didStartProvisionalLoadForFrame:]): Tell Crash Reporter which test was running,
        if we're the main frame and the test is active.
        * WebKitTestRunner/Configurations/DebugRelease.xcconfig: Make sure WEBKIT_SYSTEM_INTERFACE_LIBRARY is defined.
        * WebKitTestRunner/Configurations/InjectedBundle.xcconfig: link the injected bundle with the WebKitSystemInterface library.
        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp: