@@ -1,5 +1,15 @@
 2012-09-25  Simon Fraser  <simon.fraser@apple.com>
 
+        Fix SnowLeopard build by adding #ifdefs.
+        
+        Fix crashes on some tests where the CFURLRef appears to be null.
+
+        * WebKitTestRunner/InjectedBundle/mac/InjectedBundlePageMac.mm:
+        (WTR::testPathFromURL):
+        (WTR::InjectedBundlePage::platformDidStartProvisionalLoadForFrame):
+
+2012-09-25  Simon Fraser  <simon.fraser@apple.com>
+
         Speculative build fix for Production builds.
 
         * DumpRenderTree/mac/Configurations/Base.xcconfig:
